<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:textColor="@color/black"
        android:textSize="30sp"
        android:id="@+id/hello"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:textSize="16sp"
        android:id="@+id/userDetail"
        android:textColor="@color/red"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintLeft_toLeftOf="@id/hello"
        app:layout_constraintTop_toBottomOf="@id/hello"
        android:text="@string/user_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="18sp"
        android:id="@+id/name"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="@id/userDetail"
        app:layout_constraintTop_toBottomOf="@id/userDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:id="@+id/userName"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/userDetail"
        app:layout_constraintLeft_toRightOf="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="18sp"
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/email_"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="18sp"
        android:id="@+id/userEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintLeft_toRightOf="@id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/phone"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/phone_number_"
        app:layout_constraintLeft_toLeftOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/userPhone"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintLeft_toRightOf="@id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/state"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/state_"
        app:layout_constraintLeft_toLeftOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/userState"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/userPhone"
        app:layout_constraintLeft_toRightOf="@id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/country"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/country"
        app:layout_constraintLeft_toLeftOf="@id/state"
        app:layout_constraintTop_toBottomOf="@id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/userCountry"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/userState"
        app:layout_constraintLeft_toRightOf="@id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>